# sipam

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  .tool-versions  Justfile  LICENSE  Pipfile  README.md  compose.dev.yml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  sipam.pgsql  sipam.yaml  sonar-project.properties  token.sh
accounts/: auth_backends.py  auth_classes.py  urls.py
accounts/migrations/: 0001_auth.py  0002_auto_20200528_1852.py  0002_auto_20201014_2112.py  0002_token.py  0003_auto_20201014_2113.py  0004_merge_20201123_2138.py  0005_flaggedtoken_id.py
accounts/models/: token.py  user.py
accounts/permissions/: write.py
accounts/serializers/: token.py
accounts/tests/: token_test.py
accounts/views/: __init__.py  token.py
backend/: .coveragerc  .dockerignore  .flake8  .gitignore  .pylintrc  Containerfile  Containerfile.dev  conftest.py  manage.py  pyproject.toml
backend/accounts/: auth_backends.py  auth_classes.py  urls.py
backend/accounts/migrations/: 0001_initial.py  0002_token.py
backend/accounts/models/: __init__.py  token.py  user.py
backend/accounts/permissions/: __init__.py  readonly.py  write.py
backend/accounts/serializers/: __init__.py  token.py
backend/accounts/tests/: token_test.py
backend/accounts/views/: __init__.py  token.py
backend/sipam/: config.py  settings.py  urls.py  wsgi.py
backend/sipam/migrations/: 0001_initial.py  0002_pool_pooltype.py  0003_auto_20200310_0128.py
backend/sipam/models/: __init__.py  base.py  cidr.py  label.py  pool.py
backend/sipam/serializers/: __init__.py  assignment.py  cidr.py  label.py  pool.py
backend/sipam/tests/: cidr_test.py  label_test.py  pool_test.py
backend/sipam/utilities/: __init__.py  enums.py  error.py  fields.py  functions.py
backend/sipam/views/: __init__.py  cidr.py  label.py  pool.py  token.py
deploy/helm/: sipam.yaml
deploy/helm/sipam/: Chart.yaml  values.yaml
deploy/helm/sipam/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  service-account.yaml
deploy/helm/sipam/templates/backend/: NOTES.txt  configmap.yaml  deployment.yaml  networkpolicy.yaml  secret.yaml  secrets.yaml  service-account.yaml  service.yaml  servicemonitor.yaml
deploy/helm/sipam/templates/frontend/: configmap.yaml  deployment.yaml  networkpolicy.yaml  service.yaml
docker/: Dockerfile.backend  Dockerfile.django  Dockerfile.frontend  default.conf  nginx.conf
docs/: schema.yml
frontend/: .dockerignore  .eslintrc.json  .gitignore  Containerfile  README.md  default.conf  index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts
frontend/doc/: Architecture.md
frontend/public/: manifest.json
frontend/sipam/: .env.development  .env.production  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/sipam/public/: index.html  manifest.json
frontend/sipam/src/: App.vue  axiosInterceptor.ts  config.ts  main.js  main.ts  oidcRenew.ts  registerServiceWorker.ts  router.js  router.ts  sipam.ts
frontend/sipam/src/assets/styles/: custom.scss
frontend/sipam/src/components/: AssignForm.vue  CIDR.vue  CIDRForm.vue  Language.js  LanguagePicker.vue  Pool.vue  PoolForm.vue  Tree.vue  TreeItem.vue
frontend/sipam/src/components/cidr/: CIDR.vue  Tree.vue  TreeItem.vue
frontend/sipam/src/components/cidr/forms/: CIDRForm.vue
frontend/sipam/src/components/pool/: Pool.vue
frontend/sipam/src/components/pool/modals/: AssignCompletedModal.vue  AssignForm.vue  PoolForm.vue
frontend/sipam/src/components/token/: Token.vue
frontend/sipam/src/locales/: de.json  en.json
frontend/sipam/src/services/api/: Auth.js  Auth.ts  CIDR.js  CIDR.ts  Pool.js  Pool.ts
frontend/sipam/src/store/: store.js  store.ts
frontend/sipam/src/store/modules/: Auth.js  Auth.ts  CIDR.js  CIDR.ts  GenericAuth.ts  Pool.js  Pool.ts  Search.js
frontend/sipam/src/types/: api.ts  config.ts  store.ts
frontend/sipam/src/utils/: Language.ts
frontend/sipam/src/views/: About.vue  CIDRs.vue  Home.vue  Login.vue  Pools.vue  Profile.vue  Token.vue
frontend/sipam/src/views/oidc/: OidcCallback.vue  OidcCallbackError.vue  OidcCallbackPopup.vue  OidcLogin.vue
frontend/src/: App.vue  config.ts  main.ts  registerServiceWorker.ts  router.ts  sipam.ts
frontend/src/assets/styles/: custom.scss
frontend/src/components/: LanguagePicker.vue
frontend/src/components/cidr/: CIDR.vue  Tree.vue  TreeItem.vue
frontend/src/components/cidr/forms/: CIDRForm.vue
frontend/src/components/pool/: Pool.vue
frontend/src/components/pool/modals/: AssignCompletedModal.vue  AssignForm.vue  PoolForm.vue
frontend/src/components/token/: Token.vue
frontend/src/components/token/modals/: TokenForm.vue
frontend/src/locales/: de.json  en.json
frontend/src/store/: store.ts
frontend/src/store/modules/: Auth.ts  CIDR.ts  GenericAuth.ts  Pool.ts  Search.ts  Token.ts
frontend/src/types/: api.ts  store.ts
frontend/src/views/: About.vue  CIDRs.vue  Home.vue  Login.vue  Pools.vue  Profile.vue  Token.vue
frontend/src/views/oidc/: OidcCallback.vue  OidcCallbackError.vue  OidcCallbackPopup.vue  OidcLogin.vue
sipam/: config.py  settings.py  urls.py  views.py  wsgi.py
sipam/fixtures/: sample_pool_nets.json
sipam/migrations/: 0001_initial.py  0001_sipam_basic.py  0002_auto_20190409_2142.py  0002_auto_20191026_1134.py  0002_pool_pooltype.py  0003_auto_20191026_2233.py  0003_delete_ip.py  0003_labels.py  0004_auto_20190418_0011.py  0005_auto_20190418_0118.py  0006_cidr_flag.py  0007_auto_20190503_1947.py  0008_auto_20190503_2151.py
sipam/models/: __init__.py  acl.py  cidr.py  enums.py  ip.py  label.py  pool.py  prefix.py  tag.py
sipam/serializers/: __init__.py  assignment.py  cidr.py  ip.py  label.py  pool.py  prefix.py  tag.py
sipam/tests/: cidr_test.py  label_notest.py  label_test.py  pool_test.py
sipam/utilities/: __init__.py  enums.py  error.py  fields.py  functions.py
sipam/views/: __init__.py  cidr.py  ip.py  label.py  pool.py  prefix.py  tag.py  token.py
