[tool.poetry]
name = "sipam"
version = "0.1.0"
description = "Selfnets very own IPAM"
authors = ["Thore <thore@selfnet.de>", "Marcel <marcelf@selfnet.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
django-netfields = "^1.2.2"
djangorestframework = "^3.12.2"
psycopg2-binary = "^2.8.6"
fqdn = "^1.5.0"
coreapi = "^2.3.3"
pyyaml = "^5.3.1"
apistar = "^0.7.2"
django-cors-headers = "^3.6.0"
django-prometheus = "^2.1.0"
drf-nested-routers = "^0.92.5"
django-mptt = "^0.11.0"
drf-yasg = "^1.20.0"
djangorestframework-simplejwt = "^4.6.0"
environ-config = "^20.1.0"
drf-oidc-auth = "^1.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
mypy = "^0.790"
pylint = "^2.6.0"
flake8 = "^3.8.4"
pylint-django = "^2.3.0"
rope = "^0.18.0"
pytest-django = "^4.1.0"
coverage = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
