[tool.poetry]
name = "sipam"
version = "0.1.6"
description = "Selfnets very own IPAM"
authors = ["Thore <thore@selfnet.de>", "Marcel <marcelf@selfnet.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-netfields = "^1.2.4"
djangorestframework = "^3.13.0"
psycopg2 = "^2.9.3"
fqdn = "^1.5.0"
coreapi = "^2.3.3"
pyyaml = "^5.4.1"
apistar = "^0.7.2"
django-cors-headers = "^3.6.0"
django-prometheus = "^2.1.0"
drf-nested-routers = "^0.92.5"
django-mptt = "^0.13.0"
drf-yasg = "^1.20.0"
djangorestframework-simplejwt = "^4.6.0"
environ-config = "^21.2.0"
drf-oidc-auth = { git = "https://github.com/ThoreKr/drf-oidc-auth.git", branch = "django-40" }
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
mypy = "^0.790"
pylint = "^2.6.0"
flake8 = "^3.8.4"
pylint-django = "^2.3.0"
rope = "^0.18.0"
pytest-django = "^4.1.0"
coverage = "^5.3.1"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
