[tool.poetry]
name = "sipam"
version = "0.1.6"
description = "Selfnets very own IPAM"
authors = ["Thore <thore@selfnet.de>", "Marcel <marcelf@selfnet.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-netfields = "^1.3.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
fqdn = "^1.5.1"
coreapi = "^2.3.3"
pyyaml = "^6.0.1"
apistar = "^0.7.2"
django-cors-headers = "^4.2.0"
django-prometheus = "^2.3.1"
drf-nested-routers = "^0.93.4"
django-mptt = "^0.14.0"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.2.2"
environ-config = "^23.2.0"
gunicorn = "^21.2.0"
drf-oidc-auth = "^3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
autopep8 = "^2.0.2"
pylint = "^2.17.4"
flake8 = "^6.0.0"
pylint-django = "^2.5.3"
rope = "^1.9.0"
pytest-django = "^4.5.2"
poethepoet = "^0.20.0"
pytest-cov = "^4.1.0"

[tool.poe.tasks]
test = "pytest -s"
coverage = "pytest --cov=sipam --cov-report=term-missing"
lint = "flake8 ."
check = "mypy ."

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sipam.settings"
python_files = "*_test.py"

[tool.coverage.run]
source = ["sipam"]
branch = true

[tool.coverage.report]
omit = [
  "*/tests/*",
  "*/migrations/*",
  "*/wsgi.py",
  "*/urls.py",
  "*/settings.py",
  "manage.py",
  "settings.py",
  ".cache/*",
]
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
